<resources>
    <string name="app_name">kot</string>

    <!-- error -->
    <string name="error_timeout">网络超时</string>
    <string name="error_network">网络错误, 请检查你的网络</string>
    <string name="error_json_syntax">解析错误</string>
    <string name="error_unknown">系统繁忙，请稍后再试</string>
    <string name="error_bad_link">链接已损坏</string>
    <string name="fail_page_retry">重新加载</string>
    <string name="empty_list">没有更多数据~</string>

    <!-- error not login -->
    <string name="error_not_login">您还没登录呢，登录体验更多功能哦</string>
    <string name="login_now">现在登录</string>

    <string name="login_failed">登录失败</string>
    <string name="register_failed">注册失败</string>

    <string name="test_username">test666</string>
    <string name="test_password">test666</string>

    <!-- Login Activity -->
    <string name="user_login">用户登录</string>
    <string name="user_register">用户注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登&#160;录</string>
    <string name="register">注&#160;册</string>
    <string name="switch_register">没有账户，快来注册吧</string>
    <string name="switch_login">已有账户，直接登录</string>
    <string name="error_empty_username">没有填写用户名呢</string>
    <string name="error_username_length">用户名必须是%1$d到%2$d位哦</string>
    <string name="error_empty_password">没有填写密码呢</string>
    <string name="error_password_length">密码必须是%1$d到%2$d位哦</string>
    <string name="error_twice_password_not_equals">两次填入的密码不相同哦</string>
    <string name="error_field_required">必填项</string>
    <string name="error_invalid">格式不正确</string>
    <string name="login_ing">正在登陆中, 请稍候&#8230;</string>
    <string name="response_empty_body">返回数据为空</string>
    <string name="network_request_failed">网络连接失败</string>
    <string name="register_ing">正在注册中, 请稍候&#8230;</string>
    <string name="register_success_tip">注册成功</string>
    <string name="skip">跳过</string>

    <!-- Home -->
    <string name="home_title">首页</string>
    <string name="home_top_article_tag">【置顶】%s</string>
    <string name="home_search">搜索</string>

    <!-- Search -->
    <string name="search_title">搜索</string>
    <string name="search_hot_words">热门搜索</string>
    <string name="search_history">搜索记录</string>
    <string name="search_input_hint">输入你想搜索的内容</string>
    <string name="search_history_empty">搜索记录空空如也~</string>
</resources>
